# anylize_llm_question

./: .env.example  .gitignore  Dockerfile  LICENCE.md  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/: CONTRIBUTING.md
src/analyze_user_query/: .env.example  bootstrap.py  clickhouse_helper.py  config.py  docker-compose.yml  pyproject.toml
src/analyze_user_query/adapters/: clickhouse_repository.py  http_ip_geolocation.py  init_db.py  language_detect.py  ollama.py  orm.py  repository.py  taskiq_redis_manager.py
src/analyze_user_query/domain/: commands.py  model.py  queries.py
src/analyze_user_query/entrypoints/: fast_api.py  kafka_eventconsumer.py  taskiq_consumer.py  taskiq_task_manager.py
src/analyze_user_query/service_layer/: handlers.py  messagebus.py  query_dispatcher.py  query_handlers.py
src/analyze_user_query/tests/units/: confest.py  test_clickhouse_helper_array.py  test_clickhouse_helper_column.py  test_clickhouse_helper_decimal.py  test_clickhouse_helper_fixed_string.py  test_clickhouse_helper_function.py  test_clickhouse_helper_integer.py  test_clickhouse_helper_table.py
src/llm_query/: .env.example  Dockerfile  bootstrap.py  config.py  docker-compose.yml  helpers.py  pyproject.toml
src/llm_query/adapters/: integration_events.py  kafka_event_publisher.py  llama.py  ollama.py
src/llm_query/domain/: commands.py  errors.py  events.py  model.py  queries.py
src/llm_query/entrypoints/: fast_api.py
src/llm_query/service_layer/: handlers.py  messagebus.py  query_dispatcher.py  query_handlers.py
