[project]
name = "llm-query"
version = "0.1.0"
description = ""
authors = [
    {name = "LewiysArito",email = "nikita.kasimov.1044@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.13.2,<4.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "ollama (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
